--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "1.7.18",
-    "@headlessui/tailwindcss": "0.2.0",
-    "@tremor/react": "3.13.4",
+    "@hookform/resolvers": "3.3.4",
+    "@tanstack/react-query": "^5.27.5",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "7.51.0",
+    "react-modal": "3.16.1",
+    "react-router-dom": "6.22.3",
+    "react-select": "5.8.0",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.17",
+    "daisyui": "^4.6.2",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
