--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@hookform/resolvers": "3.3.4",
     "@tanstack/react-query": "^5.27.5",
     "axios": "^1.6.7",
+    "emoji-picker-react": "4.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.51.0",
+    "react-hot-toast": "2.4.1",
     "react-modal": "3.16.1",
     "react-router-dom": "6.22.3",
     "react-select": "5.8.0",
