--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "3.3.4",
     "@tanstack/react-query": "^5.27.5",
     "axios": "^1.6.7",
+    "echarts-for-react": "3.0.2",
     "emoji-picker-react": "4.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
